syntax = "proto3";

package common.conf;

import "google/protobuf/duration.proto";

option go_package = "github.com/devexps/go-bootstrap/api/gen/go/common/conf;conf";

message Data {
  // Database
  message Database {
    string driver = 1; // Driver nameï¼šmysql, postgresql, mongodb, sqlite...
    string source = 2; // Data source (DSN string)
    bool migrate = 3; // Data migration switch
  }

  // Redis
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4; // database index
    google.protobuf.Duration dial_timeout = 5;
    google.protobuf.Duration read_timeout = 6;
    google.protobuf.Duration write_timeout = 7;
  }

  // Etcd
  message Etcd {
    repeated string endpoints = 1;
    google.protobuf.Duration dial_timeout = 2;
  }

  Database database = 1;
  Redis redis = 2;
  Etcd etcd = 3;
}